--- a/site_sources/mkdocs.yml
+++ b/site_sources/mkdocs.yml
@@ -5,7 +5,7 @@ nav:
   - Courses Taken: courses.md
   - Courses Taught: subjects.md
   - GRE & IELTS Scores: score.md
-  - Research: research.md
+  - Publications: publications.md
   - Projects: projects.md
   - Blogs: blogs/blog_main.md
 theme:
