--- a/site_sources/mkdocs.yml
+++ b/site_sources/mkdocs.yml
@@ -4,7 +4,7 @@ nav:
   - Home: index.md
   - Courses Taken: courses.md
   - Courses Taught: subjects.md
-  - GRE & IELTS Scores: score.md
+  - Standardized Tests: score.md
   - Publications: publications.md
   - Projects: projects.md
   - Media Coverage: media.md
